--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -15,6 +15,7 @@ duckdb = "^0.10.0"
 pydantic = "^2.5.0"
 pyyaml = "^6.0"
 python-multipart = "^0.0.6"
+alembic = "^1.13.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
