--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -18,6 +18,7 @@ python-multipart = "^0.0.6"
 alembic = "^1.13.0"
 pyjwt = "^2.8.0"
 anthropic = "^0.40.0"
+email-validator = "^2.3.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
