--- a/api/config/local.yaml
+++ b/api/config/local.yaml
@@ -14,6 +14,7 @@ server:
   cors_origins:
     - http://localhost:3000
     - http://localhost:5173
+  frontend_url: http://localhost:3000
 
 auth:
   jwt_secret: ${JWT_SECRET}
