--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -158,7 +158,7 @@ tasks:
     dir: portfolio_analytics/dbt
     cmds:
       - poetry run dbt docs generate
-      - poetry run dbt docs serve
+      - poetry run dbt docs serve --port 8888
 
   dbt:clean:
     desc: Clean DBT artifacts
