--- a/portfolio_analytics/dbt/profiles.yml
+++ b/portfolio_analytics/dbt/profiles.yml
@@ -1,23 +1,19 @@
 portfolio:
   target: dev
   outputs:
+    # All environments use S3 - switching is done via env vars
+    # Local: S3_ENDPOINT_HOST=localhost:4567 (LocalStack)
+    # Prod:  S3_ENDPOINT_HOST= (empty for AWS default)
     dev:
-      type: duckdb
-      path: '../data/portfolio.duckdb'
-      threads: 4
-
-    # Production target for S3/Iceberg workflows
-    # Uses in-memory DuckDB with httpfs extension to read from S3
-    prod:
       type: duckdb
       path: ':memory:'
       threads: 4
       extensions:
         - httpfs
-        - iceberg
       settings:
         s3_access_key_id: "{{ env_var('S3_ACCESS_KEY_ID', '') }}"
         s3_secret_access_key: "{{ env_var('S3_SECRET_ACCESS_KEY', '') }}"
-        s3_endpoint: "{{ env_var('S3_ENDPOINT', '') }}"
+        s3_endpoint: "{{ env_var('S3_ENDPOINT_HOST', '') }}"
         s3_region: "{{ env_var('S3_REGION', 'us-east-1') }}"
         s3_url_style: "path"
+        s3_use_ssl: "{{ env_var('S3_USE_SSL', 'false') }}"
