--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -73,3 +73,9 @@ name = "Adapters cannot import api"
 type = "forbidden"
 source_modules = ["adapters"]
 forbidden_modules = ["api"]
+
+[[tool.importlinter.contracts]]
+name = "API cannot import adapters"
+type = "forbidden"
+source_modules = ["api"]
+forbidden_modules = ["adapters"]
